# foam-synth

./: Cargo.toml  README.md  bundler.toml
src/: dsp.rs  editor.rs  lib.rs  parameters.rs  svf_simper.rs  voice.rs
src/editor/: param_slider.rs
