[package]
name = "foam"
version = "0.1.1"
edition = "2021"
authors = ["Adam Godwin <evilspamalt@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/madadog/foam_synth"
description = "6-voice FM synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_refcell = "0.1.11"
bytemuck = "1.14.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
wide = "0.7.12"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
