[package]
name = "foam"
version = "0.1.2"
edition = "2021"
authors = ["Adam Godwin <evilspamalt@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/madadog/foam_synth"
description = "8-voice FM synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_refcell = "0.1.11"
bytemuck = "1.14.0"
enum_dispatch = "0.3.12"
fastrand = "2.0.1"
itertools = "0.11.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["opengl_canvas"] }
wide = "0.7.12"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[dev-dependencies]
hound = "3.5.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.test]
opt-level = 3
